--- a/mvc/templates/post.mustache
+++ b/mvc/templates/post.mustache
@@ -1,5 +1,10 @@
 {{#post}}
-  <h1><a href="{{permalink}}">{{{title}}}</a></h1>
-  <time>{{time}}</time>
-  {{{content}}}
+  <article>
+    <header>
+      <h1><a href="{{permalink}}">{{{title}}}</a></h1>
+      <time>{{time}}</time>
+      {{> tags}}
+    </header>
+    {{{content}}}
+  </article>
 {{/post}}
