--- a/mvc/templates/header.mustache
+++ b/mvc/templates/header.mustache
@@ -5,4 +5,4 @@
   <meta charset="{{charset}}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="{{template_directory}}/style.css">
+  <link rel="stylesheet" href="{{template_directory}}/css/base.css">
